update to index html

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
                 <img src="app/plots/illinois_plot.png" alt="IL plot" height=300 width=400>
             </div>
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/michigan_plot.png" alt="GA plot" height=300 width=400>
+                <img src="app/plots/michigan_plot.png" alt="MI plot" height=300 width=400>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/New York_plot.png" alt="CA plot" height=300 width=400>
+                <img src="app/plots/New York_plot.png" alt="NY plot" height=300 width=400>
             </div>
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/Georgia_plot.png" alt="NY plot" height=300 width=400>
+                <img src="app/plots/Georgia_plot.png" alt="GA plot" height=300 width=400>
             </div>
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/florida_plot.png" alt="GA plot" height=300 width=400>
+                <img src="app/plots/florida_plot.png" alt="FL plot" height=300 width=400>
             </div>
         </div>
         
