--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
     <main>
         <div class="row">
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/washington_plot.png" alt="WA plot" height=300 width=400>
+                <img src="app/plots/Washington_plot.png" alt="WA plot" height=300 width=400>
             </div>
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/oregon_plot.png" alt="OR plot" height=300 width=400>
+                <img src="app/plots/Oregon_plot.png" alt="OR plot" height=300 width=400>
             </div>
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/california_plot.png" alt="CA plot" height=300 width=400>
+                <img src="app/plots/California_plot.png" alt="CA plot" height=300 width=400>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/wisconsin_plot.png" alt="WI plot" height=300 width=400>
+                <img src="app/plots/Wisconsin_plot.png" alt="WI plot" height=300 width=400>
             </div>
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/illinois_plot.png" alt="IL plot" height=300 width=400>
+                <img src="app/plots/Illinois_plot.png" alt="IL plot" height=300 width=400>
             </div>
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/michigan_plot.png" alt="MI plot" height=300 width=400>
+                <img src="app/plots/Michigan_plot.png" alt="MI plot" height=300 width=400>
             </div>
         </div>
         <div class="row">
@@ -44,7 +44,7 @@
                 <img src="app/plots/Georgia_plot.png" alt="GA plot" height=300 width=400>
             </div>
             <div class="col-lg-4 col-md-4">
-                <img src="app/plots/florida_plot.png" alt="FL plot" height=300 width=400>
+                <img src="app/plots/Florida_plot.png" alt="FL plot" height=300 width=400>
             </div>
         </div>
         
