--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="jumbotron text-center">
             <h1>Seven Day Rolling Average New COVID-19 Cases</h1>
             <br>
-            <p>About the data: plots show rolling seven-day average of newly confirmed COVID-19 cases over time, starting with the first reported case in each state.</p>
-            <p>Data provided by The NY Times, available here: https://github.com/nytimes/covid-19-data/blob/master/us-states.csv</p>
+            <p style="text-align: left; color: white">About the data: plots show rolling seven-day average of newly confirmed COVID-19 cases over time, starting with the first reported case in each state.</p>
+            <p style="text-align: left; color: white">Data provided by The NY Times, available here: https://github.com/nytimes/covid-19-data/blob/master/us-states.csv</p>
         </div>
     </header>
     <main>
